<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/logo_un" />

    <TextView
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/text_color"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_below="@id/logo"
        android:text="@string/un_moto"
        android:id="@+id/logo_moto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/text_color"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_below="@id/logo_moto"
        android:text="@string/un_moto2"
        android:id="@+id/logo_moto2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_marginBottom="160dp"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:background="@drawable/login_registration"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/login_user"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/login_password"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_login"
                android:text="@string/action_sign_in"
                android:textColor="@color/text_color"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:gravity="center_horizontal"
                android:onClick="Register"
                android:text="Don't have an account? Sign up "
                android:textColor="@color/text_color" />


            <!---<Button
                android:id="@+id/email_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_signup"
                android:onClick="Register"
                android:text="@string/sing_up"
                android:textColor="@color/text_color"
                android:textStyle="bold" />-->


        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_margin="10dp"
        android:id="@+id/unf"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/unf" />

</RelativeLayout>
